--- a/src/styles/base/layout.css
+++ b/src/styles/base/layout.css
@@ -1,6 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap");
 
+body {
+  margin: 0;
+}
+
 .App {
+  padding: var(--space-big);
   font-family: "Noto Sans", sans-serif;
   font-smooth: always;
   -webkit-font-smoothing: antialiased;
