--- a/src/styles/screens/WelcomeScreen.css
+++ b/src/styles/screens/WelcomeScreen.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+#welcome-screen img {
+  display: block;
+  width: 280px;
+  margin: 0 auto;
+}
+
 #welcome-screen .button-primary {
   display: block;
   margin: 0 auto;
