--- a/src/styles/base/variables.css
+++ b/src/styles/base/variables.css
@@ -2,6 +2,8 @@
 :root {
   --color-primary: var(--swatch-blue);
   --color-text: black;
+  --color-background: var(--swatch-gray-light);
+  --color-foreground: var(--swatch-gray-dark);
 }
 
 /* Space */
