--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,6 +7,7 @@
 /* Components */
 @import "./components/button-primary.css";
 @import "./components/button-secondary.css";
+@import "./components/input.css";
 @import "./components//Modal.css";
 @import "./components/ModalForm.css";
 
