--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,6 +8,7 @@
 @import "./components/button-primary.css";
 @import "./components/button-secondary.css";
 @import "./components/input.css";
+@import "./components/InputField.css";
 @import "./components//Modal.css";
 @import "./components/ModalForm.css";
 
