--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -9,6 +9,7 @@
 @import "./components/button-primary.css";
 @import "./components/input.css";
 @import "./components/InputCheckbox.css";
+@import "./components/InputImage.css";
 @import "./components/InputField.css";
 @import "./components//Modal.css";
 @import "./components/ModalForm.css";
