--- a/src/styles/components/InputCheckbox.css
+++ b/src/styles/components/InputCheckbox.css
@@ -3,18 +3,21 @@
   padding: 0;
 }
 
+.input-checkbox,
+.input-checkbox .icon-checkmark {
+  --size: 38px;
+
+  width: var(--size);
+  height: var(--size);
+}
+
 .input-checkbox input[type="checkbox"] {
   display: none;
 }
 
 .input-checkbox .icon-checkmark {
   background-color: var(--color-background);
-
-  --size: 38px;
-
   display: inline-block;
-  width: var(--size);
-  height: var(--size);
   border-radius: var(--border-radius);
 }
 
