--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,6 +7,7 @@
 /* Components */
 @import "./components/button.css";
 @import "./components/button-primary.css";
+@import "./components/button-icon.css";
 @import "./components/input.css";
 @import "./components/InputCheckbox.css";
 @import "./components/InputImage.css";
