added media queries and finisih the project

--- a/src/styles/_base/layout.css
+++ b/src/styles/_base/layout.css
@@ -25,3 +25,11 @@ img {
 .App .header img {
   width: 100px;
 }
+
+/* Media queries */
+@media (min-width: 550px) {
+  .App {
+    max-width: 500px;
+    margin: 0 auto;
+  }
+}
