--- a/src/styles/_base/typography.css
+++ b/src/styles/_base/typography.css
@@ -31,3 +31,25 @@ label,
 button {
   font-weight: bold;
 }
+
+/* Media queries */
+@media (min-width: 550px) {
+  h1 {
+    font-size: 30px;
+  }
+
+  h2 {
+    font-size: 24px;
+  }
+
+  p,
+  input,
+  label,
+  button {
+    font-size: 18px;
+  }
+
+  small {
+    font-size: 15px;
+  }
+}
