--- a/src/styles/atoms/button-primary.css
+++ b/src/styles/atoms/button-primary.css
@@ -10,3 +10,10 @@
   text-decoration: none;
   background-color: #004a8a;
 }
+
+/* Media queries */
+@media (min-width: 550px) {
+  .button-primary {
+    width: 320px;
+  }
+}
