--- a/src/styles/atoms/button-icon.css
+++ b/src/styles/atoms/button-icon.css
@@ -1,7 +1,14 @@
 .button-icon {
-  width: 200px;
+  min-width: 200px;
 }
 
 .button-icon svg {
   margin-right: 4px;
+}
+
+/* Media queries */
+@media (min-width: 550px) {
+  .button-icon {
+    min-width: 320px;
+  }
 }
